--- a/php-beers/materialize/css/materialize.css
+++ b/php-beers/materialize/css/materialize.css
@@ -3412,6 +3412,7 @@ input[type=range] + .thumb {
   margin: 0 auto;
   max-width: 1280px;
   width: 90%;
+  color: #000;
 }
 
 @media only screen and (min-width: 601px) {
